added third project

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         </svg>
                         EliasHdzR
                     </p>
-                    <a href="https://drive.google.com/file/d/1CKp-7jpZk9DSJAvRRfUZrelUWUrTeFo3/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1WU16G4cHK7zuVVPawdyRplRQKmMz9fG4/view?usp=sharing"
                        class="btn fw-bold fs-4" style="background-color: #DAD7CD" target="_blank">
                         Ver Currículum
                     </a>
@@ -62,9 +62,16 @@
             <div class="card h-50" style="width: 25rem; background-color: #A3B18A;">
                 <img src="resources/trakr_movil.png" class="card-img-top p-3" style="background-color: #3A5A40" alt="trakr movil">
                 <div class="card-body p-0">
+                    <div style="background-color: #3A5A40" class="d-flex flex-row p-2 gap-2">
+                        <a href="https://www.figma.com/proto/Q36lj5LzD3QMHoQWLGiV7U/Trakr?node-id=80-29&p=f&t=UBaBTR4p0mnSyEmx-1&scaling=scale-down&content-scaling=fixed&page-id=80%3A28&starting-point-node-id=80%3A29"
+                           class="btn fw-bold" style="background-color: #A3B18A" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#000000"><path d="M264-48q-29.7 0-50.85-21.15Q192-90.3 192-120v-720q0-29.7 21.15-50.85Q234.3-912 264-912h432q29.7 0 50.85 21.15Q768-869.7 768-840v720q0 29.7-21.15 50.85Q725.7-48 696-48H264Zm0-120v48h432v-48H264Zm0-72h432v-480H264v480Zm0-552h432v-48H264v48Zm0 0v-48 48Zm0 624v48-48Z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/></svg>
+                        </a>
+                    </div>
                     <h5 class="card-title text-white px-3 py-1 fw-bold" style="background-color: #3A5A40">Trakr - Aplicación Móvil</h5>
                     <p class="card-text p-3 fs-5">Trakr es una aplicación que ayuda a dueños de pequeñas empresas administrar facturas de sus servicios.</p>
-                    <div class="p-3">
+                    <div class="px-3 py-5">
                         <a href="https://docs.google.com/presentation/d/1sss6_A4Vd4XKvWICAU0sDlRqHYp1qEXzaeyeWo7k1qk/edit?usp=sharing"
                            class="btn text-white fw-bold" style="background-color: #3A5A40" target="_blank">Ver Caso de Estudio
                         </a>
@@ -74,7 +81,14 @@
 
             <div class="card" style="width: 25rem; background-color: #A3B18A;">
                 <img src="resources/ui.png" class="card-img-top p-0" style="background-color: #3A5A40" alt="...">
-                <div class="card-body p-0">
+                <div class="card-body p-0 justify-content-between">
+                    <div style="background-color: #3A5A40" class="d-flex flex-row p-2 gap-2">
+                        <a href="https://www.figma.com/proto/Q36lj5LzD3QMHoQWLGiV7U/Trakr?node-id=176-69&p=f&t=8eMQUhxiTICBu1MZ-1&scaling=min-zoom&content-scaling=fixed&page-id=176%3A68&starting-point-node-id=176%3A69"
+                           class="btn fw-bold" style="background-color: #A3B18A" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#000000"><path d="M48-144v-72h864v72H48Zm120-120q-29.7 0-50.85-21.15Q96-306.3 96-336v-408q0-29.7 21.15-50.85Q138.3-816 168-816h624q29.7 0 50.85 21.15Q864-773.7 864-744v408q0 29.7-21.15 50.85Q821.7-264 792-264H168Zm0-72h624v-408H168v408Zm0 0v-408 408Z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/></svg>
+                        </a>
+                    </div>
                     <h5 class="card-title text-white px-3 py-1 fw-bold" style="background-color: #3A5A40">Trakr - Aplicación Web</h5>
                     <p class="card-text p-3 fs-5">Versión responsiva para navegadores de la aplicación Trakr.</p>
                     <div class="p-3">
@@ -84,6 +98,42 @@
                     </div>
                 </div>
             </div>
+
+            <div class="card" style="width: 25rem; background-color: #A3B18A;">
+                <img src="resources/healthhub.png" class="card-img-top p-0" style="background-color: #3A5A40" alt="...">
+                <div class="card-body p-0">
+                    <div style="background-color: #3A5A40" class="d-flex flex-row p-2 gap-2">
+                        <a href="https://www.figma.com/proto/b4Q5rQHcnsnuAwXbu2pf8P/Health-Hub?node-id=26-610&p=f&t=Wzlknx9XAKV6wIrq-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A3&starting-point-node-id=26%3A610"
+                           class="btn fw-bold" style="background-color: #A3B18A" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#000000"><path d="M264-48q-29.7 0-50.85-21.15Q192-90.3 192-120v-720q0-29.7 21.15-50.85Q234.3-912 264-912h432q29.7 0 50.85 21.15Q768-869.7 768-840v720q0 29.7-21.15 50.85Q725.7-48 696-48H264Zm0-120v48h432v-48H264Zm0-72h432v-480H264v480Zm0-552h432v-48H264v48Zm0 0v-48 48Zm0 624v48-48Z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/></svg>
+                        </a>
+                        <a href="https://www.figma.com/proto/b4Q5rQHcnsnuAwXbu2pf8P/Health-Hub?node-id=39-221&p=f&t=CJUfWERljDIoYXIS-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A5&starting-point-node-id=39%3A221"
+                           class="btn fw-bold" style="background-color: #A3B18A" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#000000"><path d="M48-144v-72h864v72H48Zm120-120q-29.7 0-50.85-21.15Q96-306.3 96-336v-408q0-29.7 21.15-50.85Q138.3-816 168-816h624q29.7 0 50.85 21.15Q864-773.7 864-744v408q0 29.7-21.15 50.85Q821.7-264 792-264H168Zm0-72h624v-408H168v408Zm0 0v-408 408Z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/></svg>
+                        </a>
+                        <a href="https://www.figma.com/proto/b4Q5rQHcnsnuAwXbu2pf8P/Health-Hub?node-id=52-1400&p=f&t=va4uLKyo8qxXmv8D-1&scaling=scale-down&content-scaling=fixed&page-id=50%3A234&starting-point-node-id=52%3A1400"
+                           class="btn fw-bold" style="background-color: #A3B18A" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#000000"><path d="M120-192q-29.7 0-50.85-21.16Q48-234.32 48-264.04v-432.24Q48-726 69.15-747T120-768h720q29.7 0 50.85 21.16Q912-725.68 912-695.96v432.24Q912-234 890.85-213T840-192H120Zm48-504h-48v432h48v-432Zm72 432h480v-432H240v432Zm552-432v432h48v-432h-48Zm0 0h48-48Zm-624 0h-48 48Z"/></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#000000"><path d="M200-120q-33 0-56.5-23.5T120-200v-560q0-33 23.5-56.5T200-840h280v80H200v560h560v-280h80v280q0 33-23.5 56.5T760-120H200Zm188-212-56-56 372-372H560v-80h280v280h-80v-144L388-332Z"/></svg>
+                        </a>
+                    </div>
+                    <h5 class="card-title text-white px-3 py-1 fw-bold" style="background-color: #3A5A40">HealthHub</h5>
+                    <p class="card-text p-3 fs-5">HealthHub es una aplicación móvil y aplicación web responsiva que le permite a los pacientes agendar citas con el médico al contestar preguntas de encuadre.</p>
+                    <div class="px-3 py-2">
+                        <a href="https://docs.google.com/presentation/d/1gSvemJcsJCLQG6mdF7qu2D5CeyaIjDxDUEwuip1QHp4/edit?usp=sharing"
+                           class="btn text-white fw-bold" style="background-color: #3A5A40" target="_blank">Ver Caso de Estudio de Aplicación Móvil
+                        </a>
+                    </div>
+                    <div class="px-3 py-2">
+                        <a href="https://docs.google.com/presentation/d/17iFHdAHjqKGbNEH-9E4ueHxVYU4m56ihhV5OqohdQZs/edit?usp=drive_link"
+                           class="btn text-white fw-bold" style="background-color: #3A5A40" target="_blank">Ver Caso de Estudio de Sitio Web Responsivo
+                        </a>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
