--- a/index.html
+++ b/index.html
@@ -13,8 +13,16 @@
 <header class="text-white text-center py-5 d-flex flex-column justify-content-center align-items-center vh-100"
         style="background-color: #344E41">
 
-    <div class="position-absolute top-0 start-0 p-5">
+    <div class="position-absolute top-0 start-0 p-5 gap-5 d-flex flex-row">
         <img src="resources/logo.png" alt="logo" width="100px">
+        <a href="#"
+           class="btn fw-bold fs-4">
+            Inicio
+        </a>
+        <a href="certs.html"
+           class="btn fw-bold fs-4">
+            Certificados
+        </a>
     </div>
 
     <div class="d-flex flex-row w-75 mb-5 justify-content-center align-items-center">
